# src/router/index.js
@@ -6,12 +6,14 @@ import OverviewView from '../views/OverviewView.vue'
 import FuelView from '../views/FuelView.vue'
 import MaintenanceView from '../views/MaintenanceView.vue'
 import SettingsView from '../views/SettingsView.vue'
+import PartsView from '../views/PartsView.vue'
 
 export default createRouter({
 	history: createWebHashHistory(),
 	routes: [
 		{ path: '/', name: 'cars', component: CarsListView },
 		{ path: '/settings', name: 'settings', component: SettingsView },
+		{ path: '/parts', name: 'parts', component: PartsView },
 		{
 			path: '/cars/:id',
 			component: CarView,
